模拟 JVM gc